[gd_scene format=3 uid="uid://be2gx5oyy7t0i"]

[ext_resource type="Script" path="res://scripts/tools/VoxelEditor.gd" id="1"]

[sub_resource type="StandardMaterial3D" id="1"]
albedo_color = Color(0.5, 0.5, 0.5, 0.3)
metallic = 0.2
roughness = 0.8
emission_enabled = true
emission = Color(0.2, 0.2, 0.2, 1)
emission_energy_multiplier = 0.2

[sub_resource type="PlaneMesh" id="2"]
material = SubResource("1")
size = Vector2(50, 50)

[sub_resource type="WorldBoundaryShape3D" id="3"]

[sub_resource type="ProceduralSkyMaterial" id="4"]
sky_top_color = Color(0.172549, 0.341176, 0.65098, 1)
sky_horizon_color = Color(0.552941, 0.686275, 0.847059, 1)
ground_bottom_color = Color(0.207843, 0.184314, 0.164706, 1)
ground_horizon_color = Color(0.552941, 0.686275, 0.847059, 1)

[sub_resource type="Sky" id="5"]
sky_material = SubResource("4")

[sub_resource type="Environment" id="6"]
background_mode = 2
sky = SubResource("5")
ambient_light_source = 3
ambient_light_color = Color(0.639216, 0.639216, 0.639216, 1)
ambient_light_sky_contribution = 0.2
tonemap_mode = 2
ssr_enabled = true
ssao_enabled = true
ssao_light_affect = 0.2
ssao_ao_channel_affect = 0.2
ssil_enabled = true
glow_enabled = true
glow_bloom = 0.1
fog_enabled = true
fog_light_color = Color(0.741176, 0.819608, 0.929412, 1)
fog_density = 0.001
volumetric_fog_enabled = true
volumetric_fog_density = 0.005

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0.2, 0.2, 0.2, 0.7)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="10"]
bg_color = Color(0.3, 0.6, 1, 0.2)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 1, 0.8)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="11"]
bg_color = Color(0.101961, 0.101961, 0.101961, 0.784314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StandardMaterial3D" id="12"]
albedo_color = Color(0.3, 0.7, 1, 0.5)
metallic = 0.3
roughness = 0.7
emission_enabled = true
emission = Color(0.3, 0.7, 1, 1)
emission_energy_multiplier = 0.2
transparency = 1

[node name="VoxelEditor" type="Node3D"]
script = ExtResource("1")

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("2")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/StaticBody3D"]
shape = SubResource("3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 10, 0)
shadow_enabled = true
shadow_opacity = 0.85
shadow_blur = 0.2
directional_shadow_mode = 0
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 30.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("6")

[node name="VoxelContainer" type="Node3D" parent="."]

[node name="EditorCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 10, 15)
current = true
fov = 45.0

[node name="GridVisualizer" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PropertyPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 600.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("7")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PropertyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
text = "Voxel Properties"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
text = "Voxel Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
text = "Pick Color"
color = Color(0.6, 0.6, 0.8, 1)
edit_alpha = false

[node name="MaterialTypeLabel" type="Label" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
text = "Material Type:"

[node name="MaterialType" type="OptionButton" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Apply to Selected"

[node name="DeleteButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Delete Selected"

[node name="DuplicateButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Duplicate Selected"

[node name="MoveButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
disabled = true
toggle_mode = true
text = "Move Selected"

[node name="AddVoxelButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Add Voxel Mode"

[node name="HSeparator3" type="HSeparator" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2

[node name="UndoButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Undo"

[node name="RedoButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Redo"

[node name="HSeparator4" type="HSeparator" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2

[node name="LoadModelButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
text = "Load Model"

[node name="SaveModelButton" type="Button" parent="UI/PropertyPanel/VBoxContainer"]
layout_mode = 2
text = "Save Model"

[node name="ViewControls" type="Panel" parent="UI"]
layout_mode = 0
offset_right = 180.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("8")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ViewControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/ViewControls/VBoxContainer"]
layout_mode = 2
text = "View Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/ViewControls/VBoxContainer"]
layout_mode = 2

[node name="ShowGridCheck" type="CheckBox" parent="UI/ViewControls/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Show Grid"

[node name="ShowWireframeCheck" type="CheckBox" parent="UI/ViewControls/VBoxContainer"]
layout_mode = 2
text = "Show Wireframe"

[node name="AutoRotateCheck" type="CheckBox" parent="UI/ViewControls/VBoxContainer"]
layout_mode = 2
text = "Auto Rotate"

[node name="CameraInfo" type="Label" parent="UI/ViewControls/VBoxContainer"]
layout_mode = 2
text = "Middle-click: orbit
Wheel: zoom"
font_size = 12

[node name="StatusPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("9")

[node name="StatusLabel" type="Label" parent="UI/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Ready"
vertical_alignment = 1

[node name="SelectionBox" type="Panel" parent="UI"]
visible = false
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2
theme_override_styles/panel = SubResource("10")

[node name="FileDialog" type="FileDialog" parent="UI"]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 400)
theme_override_styles/panel = SubResource("11")
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tres ; Voxel Resources")

[node name="GhostVoxel" type="MeshInstance3D" parent="."]
visible = false
material_override = SubResource("12")
